src/scss/style.scss
/* ... */
//####################################  NAVBAR SECTION ####################################//
.navbar {
    @extend%grid-column;
    background-color: map-get($colors, color-primary);
    &.open {
      position: fixed;
      z-index: 3;
      width: 100%;
      opacity: 0.9;
    }
    &__container {
        grid-column: center-start / center-end;
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin: 10px 15px;

        &--name{
            font-size: map-get($font-sizes, font-size-regular);
            vertical-align: middle;
        }

        &__hamburger {
            width: 60px;
            height: 45px;
            position: relative;
            transform: rotate(0deg);
            transition: .5s ease-in-out;
            cursor: pointer;
           
            span {
                display: block;
                position: absolute;
                height: 6px;
                width: 50%;
                background: map-get($colors, color-quaternary);
                opacity: 1;
                transform: rotate(0deg);
                transition: .25s ease-in-out;
            }

            span:nth-child(even) {
                left: 50%;
                border-radius: 0 9px 9px 0;
              }
              
              span:nth-child(odd) {
                left:0px;
                border-radius: 9px 0 0 9px;
              }
              
              span:nth-child(1), span:nth-child(2) {
                top: 0px;
              }
              
              span:nth-child(3), span:nth-child(4) {
                top: 18px;
              }
              
              span:nth-child(5),  span:nth-child(6) {
                top: 36px;
              }
              
              &.open span:nth-child(1), &.open span:nth-child(6) {
                transform: rotate(45deg);
              }
              
              &.open span:nth-child(2), &.open span:nth-child(5) {
                transform: rotate(-45deg);
              }
              
              &.open span:nth-child(1) {
                left: 5px;
                top: 7px;
              }
              
              &.open span:nth-child(2) {
                left: calc(50% - 5px);
                top: 7px;
              }
              
              &.open span:nth-child(3) {
                left: -50%;
                opacity: 0;
              }
              
              &.open span:nth-child(4) {
                left: 100%;
                opacity: 0;
              }
              
              &.open span:nth-child(5) {
                left: 5px;
                top: 29px;
              }
              
              &.open span:nth-child(6) {
                left: calc(50% - 5px);
                top: 29px;
              }
        }
    }
    

    &__dropdown {
      opacity: 0.9;
      top: 65px;
      padding-top: 70px;
      left: -100px;
      width: 00px;
      visibility: hidden;
      position: absolute;
      height: 100vh;
      transform-origin: left;
      transition-duration: 0.3s;
      transition-property: width visibility;
      background-color: #1a1a1a;
      
      display: flex;
      flex-direction: column;
      align-items: center;
      &__links {
        font-size: map-get($font-sizes, font-size-small);
        padding-top: 30px;

        a:hover,
        a:active {
            transform: rotateY(-90deg);         
          }
        a:link,
        a:visited {
          display: block;
          padding: 10px;
          margin: 15px;
          text-align: center;
          border-radius: 2px;
          position: relative;
          transform-style: preserve-3d;
          transform-origin: left;
          transition: transform 0.5s cubic-bezier(0.55, 0.055, 0.675, 0.19);
          

          
          &::after {
            content: attr(text);
            background-color: map-get($colors, collor-quinary);
            position: absolute;
            padding: 10px;
            transform: rotateY(90deg);
            transform-origin: left;
            transition: transform 0.4s cubic-bezier(0.55, 0.055, 0.675, 0.19);
            left: 0;
            right: 0;
          }
         
         
        }

      }

      &__logo {
        margin-top: 100px;
        font-size: map-get($font-sizes, font-size-small);
        color: map-get($colors, collor-quinary);
        display: flex;
        flex-direction: column;
        align-items: center;   
        &--barber {
            font-size: map-get($font-sizes, font-size-medium);
            &::after,
            &::before {
              display: block;
              content: '';
              background-color: map-get($colors, collor-quinary);
              height: 3px;
                      
                 
            }
        }
      }
    }
    &__dropdown.open {
      visibility: visible;
      left: 0;
      width: 300px;
      transform-origin: left;
      transition: width 0.3s ease-in;
    }
    @media screen and (max-width: 600px) {
        &__dropdown.open {
          width: 200px
        }
        
    }
}
/* ... */

